<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GetTheJob</string>
    <!--   Команда -->
    <string name="team">Команда</string>
    <string name="team_screen_subtitle">Над приложением работали</string>
    <string name="team_screen_developer_1">Людмила Зайцева</string>
    <string name="team_screen_developer_2">Евгений Пименов</string>
    <string name="team_screen_developer_3">Дмитрий Крюшников</string>
    <string name="team_screen_developer_4">Максим Беспалов</string>
    <string name="team_screen_email_subject">Обратная связь GetTheJob</string>
    <string name="team_screen_email_text">Спасибо большое вам за приложение!</string>

    <!--  Плейсхолдеры  -->
    <string name="error_no_internet">Нет интернета</string>
    <string name="error_getting_vacancies">Не удалось получить список вакансий</string>
    <string name="error_no_such_region">Такого региона нет</string>
    <string name="error_getting_list">Не удалось получить список</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_empty_list">Список пуст</string>
    <string name="error_something_went_wrong">Произошла ошибка</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>

    <!-- Toolbar -->
    <string name="search_screen">Экран поиска</string>

    <!--  Bottom nav view titles  -->
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>

    <!--   Вакансия -->
    <string name="vacancy">Вакансия</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="vacancy_experience_title">Требуемый опыт</string>
    <string name="vacancy_experience">От %1$s года до %2$s лет</string>
    <string name="vacancy_salary_from_to">от %1$s до %2$s %3$s</string>
    <string name="vacancy_salary_from">от %1$s %2$s</string>
    <string name="vacancy_salary_to">до %1$s %2$s</string>
    <string name="vacancy_salary_not_specified">зарплата не указана</string>

    <string name="mock_description">Обязанности\n
Разрабатывать новую функциональность приложения\n
Помогать с интеграцией нашего SDK в другие приложения\n
Проектировать большие новые модули\n
Писать UI- и unit-тесты\n
Следить за работоспособностью сервиса и устранять технический долг\n
Требования\n
100% Kotlin\n
WebRTC\n
CI по модели Trunk Based Development\n
Условия\n
сильная команда, с которой можно расти\n
возможность влиять на процесс и результат\n
расширенная программа ДМС: стоматология, обследования, вызов врача на дом и многое другое</string>
    <string name="vacancy_key_skills">Ключевые навыки</string>
    <string name="vacancy_key_skills_mock">Знание классических алгоритмов и структуры данных\n
Программирование для Android больше одного года\n
Знание WebRTC</string>
    <string name="contacts">Контакты</string>
    <string name="vacancy_contact_person">Контактное лицо</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="vacancy_similar_vacancies">Похожие вакансии</string>
    <string name="text_plain">text/plain</string>
    <string name="tel">tel:%1$s</string>

    <!--  Эл. адреса разработчиков  -->
    <string name="dev1_email" tools:ignore="Typos">lvzaytseva1@gmail.com</string>
    <string name="dev2_email">eu.pim@yandex.ru</string>
    <string name="dev3_email">kryushnikov.d@gmail.com</string>
    <string name="dev4_email">bespalov.m.9@ya.ru</string>

    <string name="no_applications_found">На Вашем устройстве нет подходящего приложения</string>
    <string name="something_went_wrong">Что-то пошло не так…</string>
    <string name="uri_mailto">mailto:</string>


    <!-- Экран поиска -->
    <string name="et_search_hint">Введите запрос</string>
    <string name="tv_no_vacancies">Таких вакансий нет</string>
    <string name="search">Поиск</string>
    <string name="error_check_connection">Проверьте подключение к интернету</string>

    <!--  Экран настроек фильтрации  -->
    <string name="hint_place">Место работы</string>
    <string name="hint_industry">Отрасль</string>
    <string name="hint_expected_salary">Ожидаемая зарплата</string>
    <string name="hint_enter_amount">Введите сумму</string>
    <string name="hide_without_salary">Не показывать без зарплаты</string>
    <string name="apply_changes">Применить</string>
    <string name="discard_changes">Сбросить</string>
    <string name="header_filter_settings">Настройки фильтрации</string>
    <string name="arrow_back_content_desc">Кнопка назад</string>
    <string name="share">Поделиться</string>
    <string name="header_industry">Выбор отрасли</string>
    <string name="hint_enter_industry">Введите отрасль</string>
    <string name="btn_select">Выбрать</string>
    <string name="header_country">Выбор страны</string>
    <string name="header_workplace">Выбор места работы</string>
    <string name="header_region">Выбор региона</string>
    <string name="hint_country">Страна</string>
    <string name="hint_region">Регион</string>


</resources>
