<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    android:orientation="vertical"
    tools:context=".filters.ui.FiltersFragment">

    <TextView
        style="@style/medium_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_margin"
        android:drawablePadding="@dimen/arrow_back_padding"
        android:text="@string/header_filter_settings"
        app:drawableStartCompat="@drawable/ic_arrow_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_place"
        style="@style/filter_til_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_place">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_place"
            style="@style/filter_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/screen_bg"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            tools:text="Россия" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_industry"
        style="@style/filter_til_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_industry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_industry"
            style="@style/filter_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/screen_bg"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_salary"
        style="@style/salary_til_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:layout_marginTop="@dimen/elements_top_margin"
        android:hint="@string/hint_expected_salary"
        android:theme="@style/salary_til_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_salary"
            style="@style/salary_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/hint_enter_amount"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/elements_top_margin"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/horizontal_padding">


        <TextView
            style="@style/regular_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_without_salary" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/check_box_salary"
            android:layout_width="@dimen/check_box_size"
            android:layout_height="@dimen/check_box_size"
            android:layout_gravity="end"
            android:button="@drawable/salary_check_box"
            android:checked="false" />

    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_apply_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_bg"
        android:text="@string/apply_changes"
        android:textAppearance="@style/btn_text_style"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_discard_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:background="@android:color/transparent"
        android:text="@string/discard_changes"
        android:textAppearance="@style/btn_discard_changes_text_style"
        android:visibility="gone" />

</LinearLayout>
